[tool.poetry]
name = "github-tree-sett-sarverott"
version = "0.1.0"
description = "me on the net"
authors = ["Sett Sarverott <sarverott@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
